Changed loading of font awesome to directly loading from CDN Added page transition for landing items Cleaned up z-indeces for page transitions ISSUE: y-overflow of circle expanding causes odd scroll bar expansion visibly

--- a/app/src/scss/_partials/animations.scss
+++ b/app/src/scss/_partials/animations.scss
@@ -27,6 +27,24 @@
     }
 }
 
+@keyframes expandingBoxTransition {
+    0% {
+				transform: scale(1);
+    }
+    100% {
+				transform: scale(10);
+    }
+}
+
+@keyframes fadeImageBox {
+    0% {
+				opacity: 1;
+    }
+    100% {
+				opacity: 0;
+    }
+}
+
 /*header sticky*/
 .-hidden{
 	transform: translateY(-100%);
