--- a/app/src/scss/_partials/base.scss
+++ b/app/src/scss/_partials/base.scss
@@ -49,18 +49,18 @@ h1{
 
 h2{
 	margin-bottom: 1.5rem;
-    font-weight: 500;
-    font-size: 1.6875rem;
-    line-height: 1.25;
-    color: $primary-color;
+	font-weight: 500;
+	font-size: 1.6875rem;
+	line-height: 1.25;
+	color: $primary-color;
 }
 
 h3{
 	margin-bottom: 1rem;
-    font-weight: 500;
-    font-size: 1.6875rem;
-    line-height: 1;
-    color: $primary-color;
+	font-weight: 500;
+	font-size: 1.6875rem;
+	line-height: 1;
+	color: $primary-color;
 }
 
 body{
@@ -71,6 +71,7 @@ body{
   font-size: 1rem;
   line-height: 1;
   -webkit-tap-highlight-color: transparent;
+	overflow-x: hidden;
 }
 /* hidden elements */
 .vis-hide{
@@ -90,7 +91,8 @@ body{
 .wrap-body{
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
+	min-height: 100vh;
+	z-index: 1;
 }
 
 .sf-1{
@@ -145,6 +147,7 @@ body{
 	left: 0;
 	width: 100%;
 	height: 100%;
+	z-index: 3;
 }
 
 
