--- a/app/src/scss/_partials/footer.scss
+++ b/app/src/scss/_partials/footer.scss
@@ -15,7 +15,6 @@
 }
 .footer-link{
 	padding: .5rem 1rem .5rem 0;
-	font-size: 1.5rem;
 }
 
 .btn-social-media{
