--- a/app/src/scss/_partials/header.scss
+++ b/app/src/scss/_partials/header.scss
@@ -7,8 +7,8 @@
 	position: fixed;
 	background-color: $grey;
 	color: $pink;
-	z-index: 10;
 	width: 100%;
+	z-index: 1;
 }
 
 .header-bar.-collapsed{
