--- a/app/src/scss/_partials/landing.scss
+++ b/app/src/scss/_partials/landing.scss
@@ -20,6 +20,7 @@
 .landing-work_item{
 	position: relative;
 	margin-bottom: 3rem;
+	z-index: 2;
 }
 .landing-work_content{
 	position: relative;
@@ -78,6 +79,14 @@
 .landing-work_item:hover .landing-work_preview-img{
 	transform: translateX(-50%) translateY(-50%) scale(1.02);
 }
+
+.expanding-box {
+	animation: 0.5s ease-out 0s 1 forwards expandingBoxTransition;
+}
+.fade-image-box {
+	animation: 0.2s ease-out 0s 1 forwards fadeImageBox;
+}
+
 /*landing-header*/
 .landing-header{
 	padding-top: 10rem;
